@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-30T00:44:59Z",
+  "timestamp" : "2022-06-01T00:45:10Z",
   "count_outdated" : 29,
   "uniques_outdated" : 23,
-  "count" : 37,
-  "uniques" : 31,
+  "count" : 38,
+  "uniques" : 32,
   "clones" : [
     {
       "timestamp": "2022-05-20T00:00:00Z",
@@ -14,6 +14,13 @@
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
