@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 8,
   "clones": [
     {
@@ -9,6 +9,11 @@
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
